--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,11 @@ width: 717px;
   margin-top: 500px;
 }
 
+audio {
+  width: 60%;
+  height: 100px;
+}
+
 input {
   min-width: 50px;
   height: 50px;
@@ -34,7 +39,7 @@ input {
   justify-content: center;
   align-items: center;
 }
-#timeLess {
+#timeLeft {
     height: 50px;
     width: 75px;
   display: flex;
