--- a/css/style.css
+++ b/css/style.css
@@ -8,22 +8,17 @@ body {
 width: 717px;
   min-width: 300px;
   height: 50px;
-  background-color: rgb(65, 65, 65);
+  background-color: #444;
   margin: 100px;
   display: flex;
   align-items: center;
   margin-top: 500px;
 }
 
-audio {
-  width: 60%;
-  height: 100px;
-}
-
-input {
+.btn-p1 {
   min-width: 50px;
   height: 50px;
-  background-color: rgb(89, 87, 87);
+  background-color: #444;
   border: none;
   margin: 0px;
 }
@@ -57,4 +52,76 @@ p {
   background-color: rgb(168, 168, 168);
   width:50%;
   border-radius: 3px;
+}
+
+i {
+	color: #ccc;
+}
+
+
+
+
+
+
+
+
+
+#player2 {
+	display: none;
+	background-color: #444;
+	width: 700px;
+  	min-width: 300px;
+  	background-color: rgb(65, 65, 65);
+  	margin: 100px;
+  	margin-top: 500px;
+}
+#player-top {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	height: 50px;
+	background-color: #444;
+}
+#player-img {
+	width: 50px;
+	height: 50px;
+}
+#player-bot {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	height: 30px;
+	background-color: #777;
+}
+#player-bar2 {
+  height: 5px;
+  background-color: #ccc;
+  width:60%;
+  border-radius: 6px;
+}
+
+#jaquette {
+	width: 50px;
+	height: 50px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+@media all and (max-width: 700px) {
+	#player {
+		display: none;
+	}
+	#player2 {
+		display: flex;
+		flex-direction: column;
+	}
 }
