--- a/css/style.css
+++ b/css/style.css
@@ -82,24 +82,26 @@ background-color: #575555;
 
 ​
 
-#progress{
+#progress{	
 
-margin: auto;
+
 
 }
 
 progress{
 
-    display: inline-block;
+
+
+    display: flex;
 
     -moz-box-sizing: border-box;
 
          box-sizing: border-box;
-         width:100%;
+         width:70%;
 
-    height: 12px;
+    height: 5px;
 
-    padding: 0px 0px 0px 0px;
+    padding: 0px;
 
     background: rgba(242,242,242,.9);
 
