--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ width: 717px;
   background-color: #444;
   border: none;
   margin: 0px;
+  width: 50px;
 }
 
 #left-button {
@@ -67,9 +68,9 @@ i {
 }
 
 #queryBot {
-  display: flex;
-width: 70%;
-justify-content: space-between;
+display: flex;
+min-width: 60%;
+justify-content: center;
 align-items: center;
 flex-grow: 1;
 background-color: #575555;
@@ -80,12 +81,13 @@ background-color: #575555;
 
 /*CODE BARRE DE PROGRESSION */
 
-​
+​.test {
+}
 
 #progress{
 margin: auto;
 width: 100%;
-
+}
 
 progress{
 
@@ -96,8 +98,6 @@ progress{
     -moz-box-sizing: border-box;
 
          box-sizing: border-box;
-   width:200%;
-         width:70%;
 
     height: 5px;
 
