Points Rouges enlevés

--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,10 @@ body {
 
 
 #player {
-width: 717px;
+width: 75%;
   min-width: 300px;
   background-color: #444;
-  margin: 100px;
+  margin: 50px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -81,8 +81,7 @@ background-color: #575555;
 
 /*CODE BARRE DE PROGRESSION */
 
-​.test {
-}
+
 
 #progress{
 margin: auto;
@@ -111,8 +110,6 @@ progress{
 
 }
 
-​
-
 /* Style de la barre pour Chrome*/
 
 progress::-webkit-progress-value{
@@ -133,19 +130,13 @@ progress::-webkit-progress-value{
 
     background-position: top right, top, top;
 
-​
-
 }
-
-​
 
 progress::-webkit-progress-bar{
 
     background: transparent;
 
 }
-
-​
 
 progress[value='100'] span{
 
@@ -206,8 +197,6 @@ progress[value^='1']:not([value^='1.']):not([value='1']):not([value='100']) span
     width: 15%;
 
 }
-
-​
 
 progress span{
 
