--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,34 @@
+body {
+  background-color: rgb(62, 62, 62);
+}
+
 #player {
-  height: 70%;
  width: 70%;
  border-radius: 2px solid black;
  display: flex;
+ justify-content: center;
  flex-direction: column;
+ margin: auto;
 }
 #top {
-  background: url('../images/thylacine_4_by_romainriviere.jpg');
-  min-height: 300px;
+  min-height: 500px;
+  background: url('../images/rhfactor_flou.jpeg');
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
+  display: flex;
+  align-items: flex-end;
  /*-webkit-filter: blur(1px);*/
+ transition: 0.2s all;
+
 }
 #top #image1{
-  height: 40%;
-  width: 26%;
-  margin-left: 9%;
+  width: 40%;
   border: 2px solid white;
-  margin-top: 40%;
   margin-bottom: 20px;
+  margin-left: 20px;
+  transition: 0.2s all;
+
 }
 /*#top #image2 {
   height: 40%;
@@ -27,34 +37,92 @@
 
 #middle {
   display: flex;
+  align-items: center;
   background-color:#404956;
   color:white;
-  margin-bottom: 20px;
   }
+
+  #middle button {
+background-color:rgb(105, 132, 150);
+border-radius: 50%;
+width: 30px;
+height: 30px;
+border: none;
+margin: 5px 20px 5px 0px;
+  }
+  #middle button:hover {
+background-color:rgb(130, 152, 167);
+  }
+
+#middle i {
+color: white;
+}
+
+#middle p {
+  margin: 0;
+}
+
 #time {
   margin-left: 15px;
-  margin-top: 4px;
 }
 #timeLeft{
   margin-right: 15px;
-  margin-top: 4px;
 }
 #down {
   display: flex;
   justify-content: center;
+  align-items: center;
+background-color: #c9c8c8;
+border-bottom-right-radius: 6px;
+border-bottom-left-radius: 6px;
 }
 
-.btn {
-  width: 40px;
-  height: 40px;
-  border-radius: 60px;
-  background-color:rgb(68,84,95);
-  margin-left: 20px;
-  border: 1px solid black;
-  border-radius: 1px solid white;
+#down .btn {
+  width: 50px;
+  height: 50px;
+  background-color: #c9c8c8;
+  transition: 0.2s all;
+  border-radius: 10px;
+  margin: 0px 15% 0px 15%;
+  font-size: 2em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+#down .btn:focus {
+outline: none;
+}
+
+#down .btn:active {
+}
+
+#down .btn:hover {
+  background-color: #c9c8c8;
+
+  transition: 0.3s all;
+}
+#down .btn:hover i{
+color: rgb(255, 255, 255);
+transition: 0.3s all;
+}
+#down .btn:nth-child(2):hover {
+  background-color:#c9c8c8;
+  transition: 0.3s all;
+}
+#down .btn:nth-child(2) {
+  margin: 5px 0px 5px 0px;
+
+  width: 65px;
+  height: 65px;
+  transition: 0.3s all;
+}
+
+
+
+
 .fa-play {
-  font-size: 30px;
+  font-size: 40px;
 
 }
 #play_pause {
@@ -63,7 +131,8 @@
 }
 i
  {
-  color: rgb(222,237,234);
+  color: rgb(80, 80, 80);
+  transition: 0.3s all;
 }
 
 /*CODE BARRE DE PROGRESSION */
@@ -72,7 +141,7 @@ i
 
 #progress{
 margin: auto;
-width: 80%;
+width: 90%;
 }
 
 progress{
@@ -203,13 +272,77 @@ progress span{
 
 
 
+@media all and (max-width: 730px) {
+  #top {
+    min-height: 300px;
+    background: none;
+    background-color: rgb(18, 18, 18);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 0.2s all;
 
-/*@media all and (max-width: 700px) {
-	#player {
-		display: none;
-	}
-	#player2 {
-		display: flex;
-		flex-direction: column;
-	}
-}*/
+   /*-webkit-filter: blur(1px);*/
+  }
+  #top #image1{
+    height: 180px;
+    width: 260px;
+    border: 2px solid white;
+margin: 0px;
+    transition: 0.2s all;
+
+  }
+}
+@media all and (max-width: 427px) {
+  #middle button {
+background-color:rgb(105, 132, 150);
+border-radius: 50%;
+width: 30px;
+height: 30px;
+border: none;
+margin: 5px 7px 5px 0px;
+  }
+
+  #top {
+    min-height: 0px;
+    background: none;
+    background-color: black;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    align-items: flex-end;
+   /*-webkit-filter: blur(1px);*/
+  }
+  #top #image1{
+    height: 100%;
+    width: 100%;
+    border: 2px solid white;
+    margin: 0px;  }
+
+    #down .btn {
+      width: 40px;
+      height: 40px;
+    }
+
+    #down .btn:focus {
+    outline: none;
+    }
+
+    #down .btn:hover {
+      transition: 0.2s all;
+    }
+    #down .btn:nth-child(2):hover {
+      transition: 0.2s all;
+    }
+    #down .btn:nth-child(2) {
+      margin: 10px 0px 10px 0px;
+
+      width: 60px;
+      height: 60px;
+      transition: 0.2s all;
+    }
+}
