Added cover support and some cleaning on the CSS, HTML and the naming of images.

--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ body {
 
 #top {
   min-height: 500px;
-  background: url('../images/rhfactor_flou.jpeg');
+  background-color: black;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
