--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,21 @@ body {
   align-items: flex-end;
   transition: 0.2s all;
 }
+
+p {
+  font-size: 1.7em;
+  margin: 0px auto 30px 30px;
+  color: rgb(221, 221, 221);
+  background-color: black;
+  opacity: 0.8;
+  border-radius: 4px;
+  padding: 0px 5px 0px 5px;
+
+}
+
+.box-title{
+}
+
 #top #image1 {
   width: 40%;
   border: 2px solid white;
@@ -190,7 +205,15 @@ progress span {
     justify-content: center;
     align-items: center;
     transition: 0.2s all;
+    flex-wrap: wrap;
+
   }
+
+p {
+  margin: 0px auto 30px 0px;
+
+}
+
   #top #image1 {
     height: 200px;
     width: 260px;
@@ -208,6 +231,11 @@ progress span {
     border: none;
     margin: 5px 7px 5px 0px;
   }
+
+p {
+  display: none;
+}
+
   #top {
     min-height: 0px;
     background: none;
